absIfNegElse0.asm -> absIfNegElse0.s (gas-assembler) clamp_32f -> utilitity baseLighti -> utilities/float baseAddrOffs -> utilities/fixed totalSum -> utilities/common cnv32f -> utilities/src/float copyArraysByIndices, copyColorByIndices -> utilities/common inverse_8u -> utilities/fixed

--- a/utilities/tests/common/SConscript
+++ b/utilities/tests/common/SConscript
@@ -10,11 +10,17 @@ legacy = int(ARGUMENTS.get('legacy', 1))
 debug_lvl = int(ARGUMENTS.get('debug_lvl', 1))
 #cross_compile = options.get('NMC_CROSS_COMPILE') or 'nmc-')
 
+dump_builder = Builder(action = 'nmc-objdump -d -s -x -l $SOURCE > $TARGET', suffix = '.dump', src_suffix = '.o')
+
 # get environment and set variables
 nmc_mc12101 = Environment(tools=['g++', 'gcc','gnulink', 'as'])
+nmc_mc12101['BUILDERS']['Dump'] = dump_builder
+#nmc_mc12101.Clean(dump_builder)
 
-nmc_mc12101['ENV']['PATH'] = os.environ['PATH']
+#nmc_mc12101['ENV']['PATH'] = os.environ['PATH']
+#NMC_GCC_TOOLPATH = 'd:\\download\\NMC_Mingw'
 NMC_GCC_TOOLPATH = os.environ['NMC_GCC_TOOLPATH']
+MC12101 = os.environ['MC12101']
 NMPP = os.environ['NMPP']
 HAL = os.environ['HAL']
 ARCH = 'nmc4'
@@ -23,15 +29,18 @@ nmc_mc12101['ROOT'] = ROOT
 nmc_mc12101['NMC_GCC_TOOLPATH'] = NMC_GCC_TOOLPATH
 nmc_mc12101['NMPP'] = NMPP
 nmc_mc12101['HAL'] = HAL
-nmc_mc12101['MC12101'] = os.environ['MC12101']
-nmc_mc12101['ENV']['PATH'] += "$MC12101/bin"
+nmc_mc12101['MC12101'] = MC12101
 nmc_mc12101['ARCH'] = ARCH
 
-gcc_exec_prefix = f"/cygdrive/{NMC_GCC_TOOLPATH}/nmc4-ide/lib/gcc/".replace(":","")
-gcc_exec_prefix = gcc_exec_prefix.replace("\\","/")
-nmc_mc12101['ENV']['GCC_EXEC_PREFIX'] = gcc_exec_prefix
-nmc_mc12101.PrependENVPath('PATH', f'{NMC_GCC_TOOLPATH}/nmc4-ide/bin')
-nmc_mc12101.PrependENVPath('PATH', f'{NMC_GCC_TOOLPATH}/nmc4-ide/lib')
+nmc_mc12101.PrependENVPath('PATH', f'{MC12101}/bin')
+
+if nmc_mc12101['PLATFORM'] == 'win32':
+	gcc_exec_prefix = f"/cygdrive/{NMC_GCC_TOOLPATH}/nmc4-ide/lib/gcc/".replace(":","")
+	gcc_exec_prefix = gcc_exec_prefix.replace("\\","/")
+	nmc_mc12101['ENV']['GCC_EXEC_PREFIX'] = gcc_exec_prefix
+	nmc_mc12101.PrependENVPath('PATH', f'{NMC_GCC_TOOLPATH}/nmc4-ide/bin')
+	nmc_mc12101.PrependENVPath('PATH', f'{NMC_GCC_TOOLPATH}/nmc4-ide/lib')	
+	nmc_mc12101.PrependENVPath('PATH', f'{NMC_GCC_TOOLPATH}/nmc4-ide/bin')
 
 
 # assembler
@@ -61,6 +70,14 @@ obj_cpp = [nmc_mc12101.Object(c) for c in all_cpp]
 obj_c   = [nmc_mc12101.Object(c) for c in all_c]
 obj_asm = [nmc_mc12101.Object(s, ASFLAGS = nmc_mc12101['ASFLAGS'] + ['-mmas']) for s in all_asm]
 obj_s   = [nmc_mc12101.Object(s, ASFLAGS = nmc_mc12101['ASFLAGS'] + ['-mgas']) for s in all_s]
+dump_list =[]
+for objects in [obj_cpp, obj_s, obj_asm, obj_s]:
+	for obj in objects:
+		dump = nmc_mc12101.Dump(obj)
+		dump_list.append(dump)
+		#Alias(obj + '-dump', dump)
+Alias('dump', dump_list)
+Clean('dump', dump_list)
 
 
 # linker
@@ -108,8 +125,8 @@ qemu_build_list = []
 for test in os.listdir("."):
 	if os.path.isdir(test) and test != 'obj':
 		obj_main = nmc_mc12101.Object(str(path(test)/'main.cpp'))
-		fixed_main = nmc_fixed.Program(str(path(test)/'fixed/main.abs'), [obj_main, str(path(src_dir)/f'{test}.o')])
-		float_main = nmc_float.Program(str(path(test)/'float/main.abs'), [obj_main, str(path(src_dir)/f'{test}.o')])
+		fixed_main = nmc_fixed.Program(str(path(test)/'fixed/main.abs'), [obj_main, obj_s, obj_asm, obj_cpp, obj_c])
+		float_main = nmc_float.Program(str(path(test)/'float/main.abs'), [obj_main, obj_s, obj_asm, obj_cpp, obj_c])
 		nmc_fixed.Depends(fixed_main, '$LINKSCRIPT')
 		nmc_float.Depends(float_main, '$LINKSCRIPT')
 		fixed_build_list.append(fixed_main)
