--- a/2nmc-demo-gcc/make_mc12101/SConstruct
+++ b/2nmc-demo-gcc/make_mc12101/SConstruct
@@ -130,6 +130,7 @@ host_env['PDB'] = 'bin/x64/Debug/mc12101-host.pdb'
 
 
 projects = []
+nmc_programs = []
 for i in range(2):
 	all_cpp = [Glob(path(src_dir)/'*.cpp', strings = True) 	for src_dir in src_nm_dirs[i]]
 	all_c   = [Glob(path(src_dir)/'*.c', strings = True) 	for src_dir in src_nm_dirs[i]]
@@ -147,6 +148,7 @@ for i in range(2):
 
 	# link target
 	prog = nmc[i].Program(TARGETS[i] + ".abs", [obj_cpp, obj_asm, all_c])
+	nmc_programs.append(prog)
 	Alias(f'nm{i}', prog)
 	Default(prog)
 
@@ -178,8 +180,8 @@ Alias('host', host)
 Default(host)
 
 #print(host)
-run_host = host_env.Command(source = None, target = None, action=f'./bin/x64/{Configuration}/mc12101-host-x64.exe')
-Depends(run_host, host)
+run_host = host_env.Command(source = host, target = None, action=host)
+Depends(run_host, [host, nmc_programs])
 Alias('run', run_host)
 
 
