copyOddOffset -> utilities/float dotfuncs -> utilities/float double* functions -> utilities/float fastInvSqrt -> utilities/float findMax, findMinMax -> utilities/float firestNonZeIndx -> utilities/common loadIdentify -> utilityes/float maskEq0_32f -> utilities/float, meanToInt -> utilities/float mulC_v4nm32f, mul_ma4nm32f* -> utilities/float readMask, remap -> utilities/common replaceEq0, setv4nm32f -> utilities/float split_v2nm32f -> utility/float srtsByY pc-> utility/float/pc subCRev, ternaryLt0_AddC_AddC_32f -> utilities/float tripleMulC_32f -> utilities/float

--- a/2nmc-demo-gcc/make_mc12101/SConstruct
+++ b/2nmc-demo-gcc/make_mc12101/SConstruct
@@ -180,7 +180,7 @@ Alias('host', host)
 Default(host)
 
 #print(host)
-run_host = host_env.Command(source = host, target = None, action=host)
+run_host = host_env.Command(source = host, target = None, action='$SOURCE')
 Depends(run_host, [host, nmc_programs])
 Alias('run', run_host)
 
