--- a/utilities/tests/common/SConscript
+++ b/utilities/tests/common/SConscript
@@ -81,12 +81,15 @@ Clean('dump', dump_list)
 
 
 # linker
-#nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm", "-lnm_io"]
-#nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm"]
-nmc_mc12101['WHOLELIBS'] = ["-lmc12101"]
 nmc_mc12101['LINK'] = 'nmc-gcc'
+if legacy:
+	nmc_mc12101['LIBPATH'] = ['$MC12101/lib', '$NMC_GCC_TOOLPATH/nmc4-ide/lib', '$NMPP/lib' ]
+	nmc_mc12101['WHOLELIBS'] = ["-lmc12101"]
+else:
+	nmc_mc12101['LIBPATH'] = ['$MC12101/lib', '$NMPP/lib' ]
+	#nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm", "-lnm_io"]
+	nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm"]
 nmc_mc12101['LINKCOM'] += ' -Wl,--whole-archive $WHOLELIBS -Wl,--no-whole-archive'
-nmc_mc12101['LIBPATH'] = ['$NMC_GCC_TOOLPATH/nmc4-ide/lib', '$NMPP/lib', '$MC12101/lib']
 nmc_mc12101['LIBPATH'] += ['$HAL/lib']
 nmc_mc12101['LIBS'] = ['hal-mc12101']
 
