--- a/utilities/tests/fixed/SConscript
+++ b/utilities/tests/fixed/SConscript
@@ -84,7 +84,8 @@ Clean('dump', dump_list)
 
 # linker
 #nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm", "-lnm_io"]
-nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm"]
+#nmc_mc12101['WHOLELIBS'] = ["-lmc12101load_nm"]
+nmc_mc12101['WHOLELIBS'] = ["-lmc12101"]
 nmc_mc12101['LINK'] = 'nmc-gcc'
 nmc_mc12101['LIBPATH'] = ['$MC12101/lib', '$NMC_GCC_TOOLPATH/nmc4-ide/lib', '$NMPP/lib' ]
 nmc_mc12101['LIBS'] = ['nmpp-nmc4' ]
@@ -101,9 +102,12 @@ nmc_mc12101['LIBS'] += ['hal-mc12101']
 
 if use_gdb:
 	print("stub lib is used")
-	nmc_mc12101['MC12101_GDB'] = os.environ['MC12101_GDB']
-	nmc_mc12101['LIBPATH'] += ['$MC12101_GDB']
-	nmc_mc12101['WHOLELIBS'] += [f'-lmc12101_stub_{ARCH}_{CORE}']
+	if 'MC12101_GDB' in os.environ:
+		nmc_mc12101['MC12101_GDB'] = os.environ['MC12101_GDB']
+		nmc_mc12101['LIBPATH'] += ['$MC12101_GDB']
+		nmc_mc12101['WHOLELIBS'] += [f'-lmc12101_stub_{ARCH}_{CORE}']
+	else:
+		print("Warning: value MC12101_GDB not found")
 else: 
 	print("stub lib is not used")
 
