--- a/make/Makefile
+++ b/make/Makefile
@@ -1,6 +1,7 @@
 
 
 ROOT             = ..
+
 ifeq ($(OS),Windows_NT)
 nmc4vars_win.mk:
 	-copy "$(NMC_GCC_TOOLPATH)\nmc4-ide\include\nmc4vars_win.mk" nmc4vars_win.mk
@@ -8,43 +9,42 @@ nmc4vars_win.mk:
 -include 		 nmc4vars_win.mk
 SHELL 			 = cmd
 endif
-ERRECHO			 = 2>&1|errecho
-
--include 		 nmc4vars_win.mk
-#include          $(ROOT)/global.mk
+ERRECHO			 = 2>&1|cerrecho
 
 
-ARCH             ?=nmc4_fixed
-CONFIGURATION	 ?=Release
+ARCH             ?=nmc4
+CONFIGURATION	 ?=Debug
 
 #--------------  target & input dirs -------------------
-PROJECT          = libnmopengl_$(ARCH).a
+ifeq ($(ARCH),nmc4_float)
+PROJECT          = libnmopengl_nmc4f.a
+else ifeq ($(ARCH),nmc4_fixed)
+PROJECT          = libnmopengl_nmc4.a
+endif
 OUT_DIR          = $(ROOT)/lib
 TARGET           = $(OUT_DIR)/$(PROJECT)
-INC_DIRS         = -I$(ROOT)/include -I$(NMPP)/include -I$(HAL)/include
+INC_DIRS         = -I$(ROOT)/include -I$(NMPP)/include -I$(HAL)/include -I$(ROOT)/utilities/include 
 TMP_DIR			 = $(CONFIGURATION)/$(ARCH)
 
 
 #include          $(ROOT)/make/src-nmc-float-gcc.mk
 #------------------------------------------------
 CC               = nmc-g++
+AS               = nmc-gcc
 AR               = nmc-ar
-AS               = nmc-as
 AR_FLAGS         = rcs $(TARGET)
-#AS_FLAGS         = -$(ARCH) -nm2ms  -split_sir -W-111 -W-109 $(INC_DIRS) -q
-AS_FLAGS         = -$(ARCH) -q -split_sir
-#AS_FLAGS         = -mmas -x assembler
 
 ifeq ($(ARCH),nmc4_float)
-SRC_DIRS         = $(ROOT)/src_proc0/nm $(ROOT)/src_proc0/common $(ROOT)/src_proc0/nmgl
-CC_FLAGS 	     = -mnmc4-float $(INC_DIRS)  -std=c++11 -O0
+SRC_DIRS         = $(ROOT)/src_proc0/nm $(ROOT)/src_proc0/common $(ROOT)/src_proc0/nmgl $(ROOT)/utilities/src/float $(ROOT)/utilities/src/common
+CC_FLAGS 	     = -mnmc4-float $(INC_DIRS) -O0
+AS_FLAGS         = -mnmc4-float
 else ifeq ($(ARCH),nmc4_fixed)
-SRC_DIRS         = $(ROOT)/src_proc1/nm $(ROOT)/src_proc1/common
-CC_FLAGS 	     = -mnmc4-fixed $(INC_DIRS)  -std=c++11 -O2
-#AS_FLAGS         += -Wa,-split_sir 
-else
-$(error unknow ARCH, please define ARCH type.)
+SRC_DIRS         = $(ROOT)/src_proc1/nm $(ROOT)/src_proc1/common $(ROOT)/utilities/src/fixed $(ROOT)/utilities/src/common
+CC_FLAGS 	     = -mnmc4-fixed $(INC_DIRS) -O2
+AS_FLAGS         = -mnmc4-fixed
 endif
+CXX_FLAGS	 	 = -std=c++11
+C_FLAGS 	 	 = -std=c99
 
 ifeq ($(CONFIGURATION),Debug)
 CC_FLAGS	+= -DDEBUG
@@ -65,7 +65,10 @@ OBJECTS_CPP = $(notdir $(patsubst %.cpp,%.o,$(ALL_CPP)))
 OBJECTS_ASM = $(notdir $(patsubst %.asm,%.o,$(ALL_ASM)))
 OBJECTS_C   = $(notdir $(patsubst %.c,%.o,$(ALL_C)))
 OBJECTS_S   = $(notdir $(patsubst %.s,%.o,$(ALL_S)))
-export OBJECTS     = $(addprefix $(TMP_DIR)/,$(OBJECTS_C) $(OBJECTS_CPP)  $(OBJECTS_ASM) $(OBJECTS_S))
+OBJECTS     = $(addprefix $(TMP_DIR)/,$(OBJECTS_C) $(OBJECTS_CPP)  $(OBJECTS_ASM) $(OBJECTS_S))
+
+-include $(OBJECTS:.o=.d)
+
 
 #======================== BUILD RULES ====================================
 .PHONY: all
@@ -75,15 +78,25 @@ all:
 	$(MAKE) ARCH=nmc4_fixed -j4 lib
 	@echo all done!	
 
+float:
+	$(MAKE) ARCH=nmc4_float -j4 lib
+	@echo float done!	
+
+fixed:
+	$(MAKE) ARCH=nmc4_fixed -j4 lib
+	@echo fixed done!	
+
+x86:
+	$(MAKE) -f Makefile_x86
+	@echo x86 done!	
+
 .PHONY: lib
 lib: $(TARGET)
 
 
 
 $(TARGET): $(TMP_DIR) $(OUT_DIR) $(OBJECTS) 
-	$(info "[Linking...]")
 	$(AR) rcs $(TARGET) $(OBJECTS) $(ERRECHO)
-	$(info "[OK!]")
 	
 
 $(TMP_DIR):
@@ -91,19 +104,25 @@ $(TMP_DIR):
 	
 $(OUT_DIR): 
 	-mkdir "$(@)"
+
+#depend: .depend
+#
+#.depend: $(ALL_CPP) $(ALL_ASM) $(ALL_C) $(ALL_S)
+#	rm -f ./.depend
+
+$(TMP_DIR)/%.o: %.c Makefile
+	$(CC) -c -MMD  $(CC_FLAGS) $(C_FLAGS) $(INC_DIRS) $(<) -o $(@) $(ERRECHO)
+#$(CC) -MM $(CC_FLAGS) $(C_FLAGS) $(INC_DIRS) $(<) >  $(@).d
+
+$(TMP_DIR)/%.o: %.cpp Makefile
+	$(CC) -c -MMD  $(CC_FLAGS) $(CXX_FLAGS) $(INC_DIRS) $(<) -o $(@) $(ERRECHO)
+#$(CC) -MM $(CC_FLAGS) $(CXX_FLAGS) $(INC_DIRS) $(<) >  $(@).d
 	
+$(TMP_DIR)/%.o: %.asm Makefile
+	$(AS) $(AS_FLAGS) -c -mmas -Wa,-split_sir $(<) -o$(@) $(ERRECHO)
 
-$(TMP_DIR)/%.o: %.c   $(ALL_H)
-	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS) $(ERRECHO)
-
-$(TMP_DIR)/%.o: %.cpp $(ALL_H)
-	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS) $(ERRECHO)
-	
-$(TMP_DIR)/%.o: %.asm  $(ALL_H)
-	$(AS) $(AS_FLAGS) $(<) -o$(@) $(ERRECHO)
-
-$(TMP_DIR)/%.o: %.s  $(ALL_H)
-	$(AS) $(AS_FLAGS) $(<) -o$(@) $(ERRECHO)
+$(TMP_DIR)/%.o: %.s Makefile
+	$(AS) $(AS_FLAGS) -c -mgas $(<) -o$(@) $(ERRECHO)
 	
 
 #========================== cleanup ===================
