Move unit tests for filter functions to utilities
* Filter functions were moved to utilities, so unit test also were moved
  to utilities/test. Test for cnvMaskToIndicies was replaced to test
  from test/nmpu0/cnvMaskToIndices.
* Unit tests for filter functions use tests.h, so path to tests.h was
  added to Sconscript for common and float utility functions tests.
* #include 'demo3d_common.h' were removed from tests because it is not
  used.

--- a/utilities/tests/float/SConscript
+++ b/utilities/tests/float/SConscript
@@ -55,7 +55,7 @@ nmc_mc12101['CXX'] = 'nmc-g++'
 nmc_mc12101['CFLAGS'] = Split('-std=c99')
 nmc_mc12101['CXXFLAGS'] = Split('-std=c++11')
 nmc_mc12101['CCFLAGS'] = Split('-m$ARCH-$CORE -O0 -g')
-nmc_mc12101['CPPPATH'] = Split(f'$MC12101/include $NMPP/include $ROOT/include' )
+nmc_mc12101['CPPPATH'] = Split(f'$MC12101/include $NMPP/include $ROOT/include $ROOT/../include' )
 nmc_mc12101['CPPDEFINES'] = [f'DEBUG_LEVEL={debug_lvl}']
 nmc_mc12101['CPPPATH'] += [ '$HAL/include']
 
